<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">지트 차량기사</string>

    <string name="loading">로딩중</string>
    <string name="requesting">요청중</string>

    <string name="server_data_empty">알 수 없는 에러가 발생하였습니다.</string>
    <string name="server_error">서버 요청 중 에러가 발생하였습니다.</string>
    <string name="server_fail">서버가 원활하지 않습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="login">로그인</string>
    <string name="auto_login">자동 로그인</string>
    <string name="phone_num">번호 입력</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>

    <string name="terms_agreement">이용약관</string>
    <string name="terms_agreement_private_info">개인정보취급방침</string>
    <string name="settings_app_info">앱정보</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_app_version_update">신규 업데이트</string>
    <string name="msg_confirm_logout">로그아웃 하시려면 [확인]을 눌러주세요.</string>
    <string name="msg_logout_success">로그아웃 하였습니다.</string>

    <string name="dialog_title_alarm">알림</string>
    <string name="dialog_drive_arrive_confirm">%s에 도착했다면 [확인]을 눌러주세요.</string>
    <string name="dialog_drive_cancel_confirm">운행을 종료하려면 [확인]을 눌러주세요.</string>
    <string name="dialog_drive_start_confirm">운행을 시작하려면 [확인]을 눌러주세요.</string>

    <string name="login_phone_num_empty">휴대폰 번호를 입력해주세요.</string>
    <string name="write_phone_impossible">번호를 올바르게 입력하였는지 확인해주세요.</string>
    <string name="write_phone_not_found">해당 휴대전화의 정보가 존재하지 않습니다.</string>

    <string name="title_bus_info">운행정보</string>
    <string name="title_settings">설정</string>

    <string name="main_menu_announcement">공지사항</string>
    <string name="main_menu_schedule">캠퍼스일정</string>
    <string name="main_menu_briefing">설명회</string>
    <string name="menu_item_settings">설정</string>
    <string name="menu_item_drive_finish">운행 종료</string>
    <string name="bus_info_empty">운행정보가 없습니다</string>
    <string name="announcement_list_empty">공지사항 목록에 글이 없습니다</string>
    <string name="title_bus_start">출발</string>
    <string name="btn_title_bus_timetable">승/하차 시간표</string>
    <string name="item_total">전체</string>

    <string name="error_msg_fail_to_save"> 다운로드된 파일을 저장에 실패하였습니다.</string>
    <string name="error_msg_fail_to_download"> 다운로드에 실패하였습니다.</string>
    <string name="msg_success_to_download"> 파일을 Download 폴더로 다운로드하였습니다.</string>

    <string name="btn_start_drive">운행 시작</string>
    <string name="btn_go_driving">운행중...</string>
    <string name="bus_info_impossible">운행 정보가 잘못되어 운행을 시작할 수 없습니다.</string>
    <string name="bus_info_not_found">해당 운행정보가 존재하지 않습니다.</string>
    <string name="bus_start_server_fail">서버가 원활하지 않아 운행을 시작할 수 없습니다.</string>
    <string name="drive_start">버스 운행을 시작합니다.</string>
    <string name="drive_not_start">운행을 시작하려면, 운행중인 노선이 운행종료되어야 합니다.</string>

    <string name="bus_stop_server_fail">서버가 원활하지 않습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="bus_route_empty">노선 정보가 없습니다.</string>
    <string name="bus_route_binding_error">잘못된 노선 정보입니다.</string>
    <string name="bus_route_not_found">노선 정보를 찾을 수 없습니다.</string>
    <string name="bus_route_drive_finish">운행을 종료하였습니다.</string>
    <string name="bus_route_drive_finish_binding_error">운행을 종료할 수 없습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="bus_route_drive_finish_not_found">운행정보를 찾을 수 없어 종료할 수 없습니다.</string>
    <string name="bus_route_drive_success">운행을 모두 완료하였습니다.</string>

    <string name="bus_route_impossible_click">순차적으로 버튼을 클릭해주세요.</string>
    <string name="bus_route_attention">※ 더이상 운행할 정류장이 없다면, 반드시 [운행종료] 버튼을 클릭해주시길 바랍니다.</string>
    <string name="bus_route_load_fail">해당 노선의 정보를 불러올 수 없습니다.</string>
    <string name="bus_route_wrong_approach">잘못된 접근입니다.</string>
    <string name="bus_route_server_fail">노선정보를 불러올 수 없습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="bus_route_already_end">이 노선은 이미 운행이 종료되었습니다.</string>

    <string name="pvy_terms_agree">
<font color="@color/red">* 학원일정(학원방학/간담회/워크숍), 공휴일 및 대체공휴일, 국경일은 수강료 차감되지 않습니다.\n</font>
<font color="@color/red">* 최초 학원등록시 월초변경 원칙으로 진행됩니다.\n\n</font>

"제1조 목적
이 약관은 지트에듀케이션에서 제공하는 서비스 이용조건 및 절차에 관한 사항과 기타 필요한 사항을 지트에듀케이션과(와) 이용자의 권리, 의미 및 책임사항 등을 규정함을  목적으로 합니다.

제2조 약관의 효력과 변경
	1. 이 약관은 이용자에게 공시함으로서 효력이 발생합니다.
	2. 지트에듀케이션는 사정 변경의 경우와 영업상 중요사유가 있을 때 약관을 변경할 수 있으며, 변경된 약관은 전항과 같은 방법으로 효력이 발생합니다.

제3조 약관 외 준칙
이 약관에 명시되지 않은 사항이 관계법령에 규정되어 있을 경우에는 그 규정에 따릅니다.

제2장 회원 가입과 이용

제1조 회원의 정의
회원이란 지트에듀케이션에서 회원으로 적합하다고 인정하는 일반 개인으로 본 약관에 동의하고 회원가입 양식을 작성하고 '본인의 ID'로 '비밀번호'를 발급받은 사람을 말합니다.

제2조 회원 가입의 성립
	1. 회원 가입은 이용자의 이용신청에 대한 지트에듀케이션의 이용승낙과 이용자의 약관내용에 대한 동의로 성립됩니다.
	2. 회원으로 가입하여 서비스를 이용하고자 하는 희망자는 지트에듀케이션에서 요청하는 개인 신상정보를 제공해야 합니다.
	3. 이용자의 가입신청에 대하여 지트에듀케이션에서 승낙한 경우, 지트에듀케이션는 회원 ID와 기타 지트에듀케이션에서 필요하다고 인정하는 내용을 이용자에게 통지합니다.
	4. 가입할 때 입력한 ID는 변경할 수 없으며, 한 사람에게 오직 한 개의 ID가 발급됩니다.
	5. 지트에듀케이션는 다음 각 호에 해당하는 가입신청에 대하여는 승낙하지 않습니다.
		가. 다른 사람의 명의를 사용하여 신청하였을 때
		나. 본인의 실명으로 신청하지 않았을 때
		다. 가입 신청서의 내용을 허위로 기재하였을 때
		라. 만14세 이하인 때
		마. 사회의 안녕과 질서 혹은 미풍양속을 저해할 목적으로 신청하였을 때

제3조 서비스 이용 및 제한
	1. 서비스 이용은 회사의 업무상 또는 기술상 특별한 지장이 없는 한 연중무휴, 1일 24시간을 원칙으로 합니다.
	2. 전항의 서비스 이용시간은 시스템 정기점검 등 지트에듀케이션에서 필요한 경우, 회원에게 사전 통지한 후 제한할 수 있습니다.
	3. 서비스 내용 중 테스트예약, JFP상담신청, 설명회예약에 대한 회신은 회사의 업무 시간에만 가능 합니다.

제4조 JFP 상담의 이용
	1. 회원으로 등록한 모든 사람들이 신청 할 수 있습니다.
	2. 지트에듀케이션에서 입시 상담을 유료화할 경우 유료화의 시기, 정책, 비용에 대하여 유료화 실시 이전에 서비스에 공시하여야 합니다.

제3장 회원 탈퇴, 재가입 및 이용 제한

제1조 서비스 탈퇴
	1. 회원이 탈퇴를 원하면 회원 본인이 직접 전자메일을 통해 운영자에게 해지 신청을 요청해야 합니다.
	2. 탈퇴 신청시 본인임을 알 수 있는 이름, ID, 전화번호, 해지사유를 알려주면, 가입기록과 일치 여부를 확인한 후 가입을 해지합니다.
	3. 탈퇴 여부는 기존의 ID와 비밀번호로 로그인이 되지 않으면 해지된 것입니다.

제2조 서비스 재가입
	1. 제1조에 의하여 서비스에서 탈퇴한 사용자가 재가입을 원할 경우, 회원 본인이 직접 전자메일을 통해 운영자에게 재가입을 요청하면 됩니다.
	2. 재가입 요청시 본인임을 알 수 있는 이름, ID, 전화번호를 알려주면 재가입 처리가 이루어집니다.
	3. 기존의 ID와 비밀번호로 로그인이 되면 재가입이 이루어진 것입니다.

제3조 서비스 이용제한
지트에듀케이션는 회원 또는 회원의 자녀가 다음 사항에 해당하는 행위를 하였을 경우, 사전통지 없이 이용계약을 해지하거나 기간을 정하여 서비스 이용을 중지할 수 있습니다.

	가. 공공 질서 및 미풍 양속에 반하는 경우
	나. 범죄적 행위에 관련되는 경우
	다. 타인의 ID 및 비밀번호를 도용한 경우
	바. 서비스에 위해를 가하는 등 건전한 이용을 저해하는 경우
	아. 기타 관련 법령이나 지트에듀케이션에서 정한 이용조건에 위배되는 경우

제5장 의무

제1조 회사의 의무
	1. 지트에듀케이션는 특별한 사정이 없는 한 회원이 서비스를 이용할 수 있도록 합니다.
	2. 지트에듀케이션는 이 약관에서 정한 바에 따라 계속적, 안정적으로 서비스를 제공할 의무가 있습니다.
	3. 지트에듀케이션는 회원으로부터 소정의 절차에 의해 제기되는 의견에 대해서 적절한 절차를 거쳐 처리하며, 처리시 일정기간이 소요될 경우 회원에게 그 사유와 처리 일정을 알려주어야 합니다.

제2조 회원정보 보안의 의무
	1. 회원의 ID와 비밀번호에 관한 모든 관리의 책임은 회원에게 있습니다.
	2. 회원은 서비스의 일부로 보내지는 서비스의 전자우편을 받는 것에 동의합니다.
	3. 자신의 ID가 부정하게 사용된 경우, 회원은 반드시 지트에듀케이션에 그 사실을 통보해야 합니다.
	4. 지트에듀케이션는 개인의 신분 확인이 가능한 정보를 회원 혹은 사용자의 사전허락 없이 지트에듀케이션과(와) 관계가 없는 제3자에게 제공하지 않습니다.
	5. 지트에듀케이션는 서비스의 사용의 편의를 위하여 Cookie 기술을 사용할 수 있습니다. Cookie란 다시 방문하는 사용자를 파악하고 그 사용자의 계속된 접속과 개인화된 서비스 제공을 돕기 위해 웹사이트가 사용하는 작은 텍스트 파일입니다. 일반적으로 Cookie는 Cookie를 부여한 사이트 밖에서는 의미가 없는 유일한 번호를 사용자에게 부여하는 방식으로 작동합니다. Cookie는 사용자의 시스템 내부로 침입하지 않으며 사용자의 파일에 위험하지 않습니다. 지트에듀케이션는 서비스의 광고주나 관련있는 제3자가 Cookie를 사용하는 것을 막을 수 없습니다. 회원 혹은 사용자가 Cookie를 사용한 정보수집을 원하지 않는 경우에는 웹 브라우저에서 Cookie를 받아들일지 여부를 조절할 수 있습니다. 하지만 서비스(특히, 개인화된 정보)가 제대로 작동하기 위해서는 Cookie의 사용이 필요할 수 있습니다.
	6. 지트에듀케이션는 회원의 정보를 서비스 또는 회사와 업무제휴 업체간에 상호 제공/활용할 수 있습니다.

제6장 분쟁조정
	1. 본 이용약관에 규정된 것을 제외하고 발생하는 서비스 이용에 관한 제반문제에 관한 분쟁은 최대한 쌍방합의에 의해 해결하도록 한다.
	2. 서비스 이용으로 발생한 분쟁에 대해 소송이 제기될 경우 회사의 소재지를 관할하는 법원을 관할법원으로 합니다.

부칙
이 약관은 2018년 11월 30일 시행합니다."
    </string>

    <string name="briefing_privacy_content">
        개인정보 취급방침 간소\n
        지트에듀케이션은 귀하의 개인정보보호를 매우 중요시하며, 개인정보보호방침을 통하여 귀하께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.\n\n

        &lt;개인정보 수집에 대한 동의&gt;\n
        지트에듀케이션은 귀하께 회원가입시 개인정보보호방침 또는 이용약관의 내용을 공지하며 회원가입버튼을 클릭하면 개인정보 수집에 대해 동의하신 것으로 봅니다.\n\n

        &lt;개인정보의 수집목적 및 이용목적&gt;\n
        지트에듀케이션은 다음과 같은 목적을 위하여 개인정보를 수집하고 있습니다.\n
        - 지트에듀케이션 및 제휴사이트 서비스를 위한 회원 가입 및 이용아이디 발급\n
        - 기본적인 수강과 상담을위한 안내 및 서비스 제공\n
        - 수납과 결제에 대한 서비스 제공\n
        - 시설안전 및 화재, 범죄 예방을 위한 영상 정보\n
        - 기타, 새로운 서비스 및 정보 안내\n
        단, 이용자의 기본적 인권침해의 우려가 있는 민감한 개인정보는 수집하지 않습니다. 지트에듀케이션은 상기 범위 내에서 보다 풍부한 서비스를 제공하기 위해 이용자의 자의에 의한 추가정보를 수집합니다.\n\n

        &lt;수집하는 개인정보 항목&gt;\n
        지트에듀케이션은 회원가입, 상담, 서비스 신청 등을 위해 아래와 같은 개인정보를 수집하고 있습니다.\n
        -수집항목: 학생명, 성별, 학교, 학년, 생년월일, 학생 연락처, 학부모 연락처 및 성함, 자택주소, 현금영수증 번호, 로그인 ID(이메일), 비밀번호, 서비스이용기록, 접속로그, 쿠키, 접속 IP 정보 , 결제기록\n
        -개인정보 수집방법: 홈페이지(회원가입, 테스트예약, 상담신청, 설명회예약 등) 쿠키에 의한 개인정보 수집\n
        지트에듀케이션은 귀하에 대한 정보를 저장하고 수시로 찾아내는 \'쿠키 (cookie)\' 를 사용합니다. 쿠키는 웹사이트가 귀하의 컴퓨터 브라우저(넷스케이프, 인터넷 익스플로러 등)로 전송하는 소량의 정보입니다. 귀하가 웹사이트에 접속을 하면 지트에듀케이션 웹서버는 귀하의 브라우저에 있는 쿠키의 내용을 읽고, 귀하의 추가정보를 귀하의 컴퓨터에서 찾아 접속에 따른 아이디 등의 추가 입력없이 서비스를 제공할 수 있습니다. 쿠키는 귀하의 컴퓨터는 식별하지만 귀하를 개인적으로 식별하지는 않습니다.\n
        또한 귀하는 쿠키에 대한 선택권이 있습니다. 웹브라우저의 옵션을 조정함으로써 모든 쿠키를 다 받아들이거나, 쿠키가 설치될 때 통지를 보내도록 하거나 아니면 모든 쿠키를 거부할 수 있는 선택권을 가질 수 있습니다.\n\n

        &lt;개인정보의 제3자에 대한 제공&gt;\n
        지트에듀케이션은 귀하의 개인정보를 &lt;개인정보의 수집목적 및 이용목적&gt;에서 고지한 범위 내에서 사용하며, 동 범위를 초과하여 이용하거나 타인 또는 타기업/기관에 제공하지 않습니다. 그러나 보다 나은 서비스 제공을 위하여 귀하의 개인정보를 제휴사에게 제공하거나 또는 제휴사와 공유할 수 있습니다. 단, 개인정보를 제공하거나 공유할 경우에는 사전에 귀하께 고지하여 드립니다.\n\n

        &lt;개인정보의 열람/정정&gt;\n
        귀하는 언제든지 등록되어 있는 귀하의 개인정보를 열람하거나 정정하실 수 있습니다. 개인정보 열람 및 정정을 하고자 할 경우에는 &lt;회원정보수정&gt;을 클릭하여 직접 열람 또는 정정하거나 개인정보관리책임자에게 E-mail로 연락하시면 조치하여 드립니다.귀하가 개인정보의 오류에 대한 정정을 요청한 경우, 정정을 완료하기 전까지 당해 개인정보를 이용하지 않습니다.\n\n

        &lt;개인정보 수집, 이용, 제공에 대한 동의철회&gt;\n
        회원가입 등을 통해 개인정보의 수집, 이용, 제공에 대해 귀하께서 동의하신 내용을 귀하는 언제든지 철회할 수 있습니다. 동의철회는 웹사이트 및 개인정보관리책임자에게 E-mail 등으로 연락하시면 즉시 개인정보의 삭제 등 필요한 조치를 하겠습니다.\n\n

        &lt;개인정보의 보유기간 및 이용기간&gt;\n
        귀하의 개인정보는 다음과 같이 개인정보의 수집목적 또는 제공받은 목적이 달성되면 파기됩니다.\n
        -게시물 작성을 위해 제공된 개인정보는 상담 및 안내를 위해 정보제공자에게 연락을 취할 수 있습니다.\n
        -회원 가입정보의 경우, 회원 가입을 탈퇴하거나 회원에서 제명된 때 위 보유기간에도 불구하고 계속 보유하여야 할 필요가 있을 경우에는 귀하의 동의를 받습니다.\n\n

        &lt;개인정보보호를 위한 기술적 대책&gt;\n
        지트에듀케이션은 귀하의 개인정보를 취급함에 있어 개인정보가 분실, 도난, 누출, 변조 또는 훼손되지 않도록 안전성 확보를 위하여 다음과 같은 기술적 대책을 강구하고 있습니다.\n
        귀하의 개인정보는 비밀번호에 의해 보호되며, 파일 및 전송 데이터를 암호화하거나 파일 잠금기능(Lock)을 사용하여 중요한 데이터는 별도의 보안기능을 통해 보호되고 있습니다.\n
        지트에듀케이션은 회원인증과 관련 암호알고리즘을 이용하여 네트워크 상의 개인정보를 안전하게 전송할 수 있는 인증 및 보안장치를 채택하고 있으며, 시스템상 사정에 의해 미시행시 도우미에 의한 의사 확인을 시행하고 있습니다.\n
        해킹 등에 의해 귀하의 개인정보가 유출되는 것을 방지하기 위해 외부로부터의 침입을 차단하는 장치를 이용하고 있으며, 각 서버마다 침입탐지시스템을 설치하여 24시간 침입을 감시하고 있습니다.\n\n

        &lt;의견수렴 및 불만처리&gt;\n
        지트에듀케이션은 개인정보보호와 관련하여 귀하가 의견과 불만을 제기할 수 있는 창구를 개설하고 있습니다. 개인정보와 관련한 불만이 있으신 분은 지트에듀케이션의 개인정보 관리책임자에게 의견을 주시면 접수 즉시 조치하여 처리결과를 통보해 드립니다.\n\n

        &lt;14세 미만 어린이들에 대한 보호정책&gt;\n
        지트에듀케이션은 14세 미만 어린이들에 대한 회원 미가입 정책과 함께 개인정보를 부모의 동의 없이 제3자와 공유하지 않으며 사용자에 관한 정보를 매매하거나 대여하지 않습니다.\n\n

        &lt;개인정보 관리책임자&gt;\n
        지트에듀케이션은 개인정보에 대한 의견수렴 및 불만처리의 정책을 담당하는 개인정보정책 담당 관리책임자를 지정하고 있습니다. 본 정책에 대한 불만사항이 있으시다면 아래 연락처로 문의 하시면 친절히 처리하여 드리겠습니다.\n\n

        &lt;개인정보정책 책임자&gt;\n
        성명 : 이동희\n
        소속 : 지트에듀케이션\n
        연락처 : 031-276-8003\n
        이메일 : jeetedu@naver.com\n\n

        시행일 개인정보보호정책은 2018년 11월 30일부터 시행합니다.
    </string>

    <string name="accessibility_service_label">화면 읽기 서비스</string>
    <string name="accessibility_description">접근성 권한을 필요로 합니다!.</string>

    <string name="msg_backbutton_to_exit">뒤로 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="msg_inappupdate_fail">앱 업데이트가 정상적으로 완료되지 않았습니다.</string>

    <string name="phonenumber">휴대폰번호</string>
    <string name="auth_request">인증요청</string>
    <string name="input_auth_number">인증번호 입력</string>
    <string name="auth_complete">인증이 완료되었습니다.</string>
    <string name="auth_incomplete">인증이 완료되지 않았습니다. 앱을 재시작하여 인증을 완료해 주세요.</string>
    <string name="auth_incomplete2">인증이 완료되지 않았습니다. 앱 사용을 위해 인증을 완료해 주세요.</string>
    <string name="timeout">시간초과</string>
    <string name="empty_info">정보가 없습니다.</string>
    <string name="empty_phonenumber">휴대폰번호 정보가 없습니다.</string>
    <string name="msg_re_auth">휴대폰번호를 다시 인증해 주세요.</string>
    <string name="auth_number_msg">[지트에듀케이션] 인증번호는 [%d] 입니다.</string>
    <string name="check_auth_number">인증번호 시간이 초과 되었거나 정보가 일치하지 않습니다.</string>
    <string name="msg_auth_description">• 로그인 시 휴대폰 인증을 진행합니다.\n자동로그인을 체크하면 다시 인증을 받지 않아도 됩니다.</string>
</resources>