<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_manager"
    tools:context=".activity.LoginActivity">

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:fillViewport="true"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:scrollbars="none">-->
<!--        -->
<!--    </androidx.core.widget.NestedScrollView>-->

    <LinearLayout
        android:id="@+id/login_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/img_login_jeet" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_login_textbox02"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin_small">

                <EditText
                    android:id="@+id/edit_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext_login"
                    android:hint="@string/phone_num"
                    android:maxLength="100"
                    android:inputType="number"
                    android:padding="@dimen/editbox_padding"
                    android:textColor="@color/font_color_default"
                    android:textColorHint="@color/font_color_999"
                    android:textSize="@dimen/font_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_small"
                    android:background="@drawable/selector_bt_login_manager"
                    android:stateListAnimator="@xml/animate_button_push"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_large" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/ly_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/layout_margin"
            android:stateListAnimator="@xml/animate_button_push">

            <CheckBox
                android:id="@+id/checkbox_login"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/selector_bt_login_check"
                android:button="@null"
                android:checked="true"
                android:clickable="false" />

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/checkbox_login"
                android:text="@string/auto_login"
                android:textColor="@color/font_color_default"
                android:textSize="@dimen/font_size" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>