<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <kr.jeet.edu.bus.view.CustomAppbarLayout
        android:id="@+id/customAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customAppbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none"
        android:background="@color/bg_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setting_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/layout_margin_small"
                android:background="@drawable/bg_setting_layout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_set_operation_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_set_click_event_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="1dp"
                    android:paddingHorizontal="@dimen/layout_margin_small">

                    <TextView
                        android:id="@+id/tv_set_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginVertical="@dimen/settings_btn_box"
                        android:text="@string/terms_agreement"
                        android:textSize="@dimen/font_size"
                        android:textColor="@color/font_color_default"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/line_system_first"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="1dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_set_operation_policy"
                    android:background="@color/line_set"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_set_PI_use_consent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_system_first"
                    android:layout_marginHorizontal="1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingHorizontal="@dimen/layout_margin_small">

                    <TextView
                        android:id="@+id/tv_set_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginVertical="@dimen/settings_btn_box"
                        android:text="@string/terms_agreement_private_info"
                        android:textSize="@dimen/font_size"
                        android:textColor="@color/font_color_default"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                    android:id="@+id/line_system_second"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="1dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_set_PI_use_consent"
                    android:background="@color/line_set"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_set_app_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/line_system_second"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingHorizontal="@dimen/layout_margin_small">

                    <TextView
                        android:id="@+id/tv_set_app_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginVertical="@dimen/settings_btn_box"
                        android:text="@string/settings_app_info"
                        android:textSize="@dimen/font_size"
                        android:textColor="@color/font_color_default"/>

                    <TextView
                        android:id="@+id/tv_app_version_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@id/tv_app_version"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/bg_app_version_update"
                        android:layout_marginEnd="6dp"
                        android:paddingVertical="@dimen/app_version_badge_padding_vertical"
                        android:paddingHorizontal="@dimen/app_version_badge_padding_horizontal"
                        android:text="@string/settings_app_version_update"
                        android:textColor="@color/font_color_default"
                        android:textSize="@dimen/font_size"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/font_size"
                        android:textColor="@color/font_color_default"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/line_system_third"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="1dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_set_app_info"
                    android:background="@color/line_set"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_set_click_event_bottom"
                    app:layout_constraintTop_toBottomOf="@id/line_system_third"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingHorizontal="@dimen/layout_margin_small">

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginVertical="@dimen/settings_btn_box"
                        android:text="@string/settings_logout"
                        android:textSize="@dimen/font_size"
                        android:textColor="@color/red"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>